[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://chest.gd" id="1_chest"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(40, 40)

[node name="Chest" type="Area2D"]
z_index = 1
script = ExtResource("1_chest")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
color = Color(0.7, 0.5, 0.3, 1.0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="InteractionText" type="Label" parent="."]
z_index = 2
offset_left = -60.0
offset_top = -50.0
offset_right = 60.0
offset_bottom = -24.0
text = "Press E to open"
horizontal_alignment = 1

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
